# FantasyFightingGame

./: CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp  save.txt
Arena/: Arena.cpp  Arena.h
Creature/: Creature.cpp  Creature.h
Creature/Character/: Character.cpp  Character.h
Creature/Enemy/: Enemy.cpp  Enemy.h
Shop/: Shop.cpp  Shop.h
Shop/Item/: Item.cpp  Item.h
Shop/Item/Armor/: Armor.cpp  Armor.h
Shop/Item/Armor/Armors/: IronArmor.cpp  IronArmor.h  ModernArmor.cpp  ModernArmor.h  WoodenArmor.cpp  WoodenArmor.h
Shop/Item/Weapon/: Weapon.cpp  Weapon.h
Shop/Item/Weapon/Weapons/: Dagger.cpp  Dagger.h  Katana.cpp  Katana.h  Pistol.cpp  Pistol.h  Stick.cpp  Stick.h
